# aic-planner

./: CMakeLists.txt  README.md  flake.nix
include/aic-planner/: product.hpp
src/: CMakeLists.txt  main.cpp  product.cpp
